--- a/adidas-database-service/src/main/resources/application.yml
+++ b/adidas-database-service/src/main/resources/application.yml
@@ -1,33 +1,36 @@
-###
-#   Database Settings
-###
-        
-# # Enabling H2 Console
-# spring.h2.console.enabled=true
-# #Turn Statistics on
-# spring.jpa.properties.hibernate.generate_statistics=true
-# logging.level.org.hibernate.stat=debug
-# # Show all queries
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# logging.level.org.hibernate.type=trace
+---
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8010/eureka/
+server: 
+  port: 8094
 
-#---
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8010/eureka/
-#server: 
-#  port: 8093
-#
-#spring:
-#  application:
-#    name: adidas-database-service
-#  datasource: 
-#    url: jdbc:h2:mem:testdb
-#    driverClassName: org.h2.Driver
-#    username: sa
-#    password: 
-#  jpa: 
-#    database-platform: org.hibernate.dialect.H2Dialect        
-        
+spring:
+  application:
+    name: adidas-database-service
+  datasource: 
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: 
+  jpa: 
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate: 
+      ddl-auto: update
+    properties: 
+      hibernate: 
+        show_sql: true
+        use_sql_comments: true
+        format_sql: true
+        type: trace 
+        hbm2ddl: update
+  h2:
+    console: 
+      enabled: true  
+
+logging: 
+  level: 
+    com: 
+      adidas: DEBUG     
+
