--- a/adidas-subscription-service/src/main/resources/application.yml
+++ b/adidas-subscription-service/src/main/resources/application.yml
@@ -27,7 +27,10 @@ hystrix:
       execution:
         isolation:
           strategy: SEMAPHORE
-          
+
+date:
+  format: yyyy-MM-dd
+           
 logging: 
   level: 
     com: 
