--- a/adidas-event-service/src/main/resources/application.yml
+++ b/adidas-event-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 
 spring:
   application:
-    name: adidas-email-service
+    name: adidas-event-service
   
 songs: 
   - We Will Rock You
