--- a/adidas-event-service/pom.xml
+++ b/adidas-event-service/pom.xml
@@ -9,7 +9,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>email</name>
+	<name>adidas-event-service</name>
 	<description>Event Microservice</description>
 
 	<parent>
