--- a/eureka-server-solution/pom.xml
+++ b/eureka-server-solution/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>eureka-server-solution</name>
+	<name>adidas-eureka-server</name>
 	<description>Eureka server</description>
 
 	<!-- This Eureka server is a Spring Boot project. -->
