--- a/adidas-database-service/pom.xml
+++ b/adidas-database-service/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>adidas-database-service</name>
-	<description> database microservice</description>
+	<description>JPA database microservice</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -17,7 +17,7 @@
 		<version>2.1.0.RELEASE</version>
 		<relativePath />
 	</parent>
-
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
