--- a/adidas-eureka-server/pom.xml
+++ b/adidas-eureka-server/pom.xml
@@ -11,14 +11,13 @@
 	<name>adidas-eureka-server</name>
 	<description>Eureka server</description>
 
-	<!-- This Eureka server is a Spring Boot project. -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.1.0.RELEASE</version>
+		<relativePath />
 	</parent>
-
+		
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>com.adidas.Application</start-class>
